docs: Phase 5 — README Docker quickstart + ARCHITECTURE + CLAUDE.md v1.5 + T-HEALTHCHECK-ACTUATOR
README: Docker (recommended) quickstart with 3-step build+run flow.
Phase 5 status row → Shipped. ARCHITECTURE: Docker deployment section
(volume contract table, JVM flags, MaxRAMPercentage=75.0 mmap rationale,
multi-stage build explanation). CLAUDE.md: Phase 5 implementation phases
entry expanded with all decisions. TODOS: T-HEALTHCHECK-ACTUATOR added
(migrate HEALTHCHECK to /actuator/health in Phase 6 once actuator dep
is added — Phase 5 uses /v3/api-docs as zero-dep proxy).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>